Use different list constructor for JDK8 compatibility